[gd_scene load_steps=21 format=3 uid="uid://djuyho5k41npv"]

[ext_resource type="Script" uid="uid://b3o3sxixvlni6" path="res://scenes/main/game_main.gd" id="1_womm6"]
[ext_resource type="Texture2D" uid="uid://b382defop647e" path="res://gfx/water.png" id="3_sjx8o"]
[ext_resource type="PackedScene" uid="uid://gmch15bfhgtj" path="res://scenes/pond_inhabitants/worm.tscn" id="4_er30b"]
[ext_resource type="Texture2D" uid="uid://bdbe62yrq2ih4" path="res://gfx/background_water.png" id="4_gfm1o"]
[ext_resource type="Texture2D" uid="uid://dmsm0qtqvg1ii" path="res://gfx/background_walls.png" id="4_wtliu"]
[ext_resource type="PackedScene" uid="uid://cjyysirxqi8ii" path="res://scenes/xogotl/xogotl.tscn" id="5_8hvka"]
[ext_resource type="PackedScene" uid="uid://bwa330yi6r1ma" path="res://scenes/pond_inhabitants/shrimp.tscn" id="7_c21e4"]
[ext_resource type="PackedScene" uid="uid://dqnao3wfq00mo" path="res://scenes/main/boat.tscn" id="8_gfm1o"]
[ext_resource type="PackedScene" uid="uid://d2gp3dxq0uju0" path="res://scenes/main/cloud.tscn" id="9_kx2xn"]
[ext_resource type="PackedScene" uid="uid://bdvpk21cn1b7o" path="res://scenes/main/hud.tscn" id="10_tnuef"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wtliu"]
atlas = ExtResource("3_sjx8o")
region = Rect2(0, 0, 16, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfm1o"]
atlas = ExtResource("3_sjx8o")
region = Rect2(17, 0, 16, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7gmy"]
atlas = ExtResource("3_sjx8o")
region = Rect2(34, 0, 16, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_hvvpt"]
atlas = ExtResource("3_sjx8o")
region = Rect2(51, 0, 16, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ddng"]
atlas = ExtResource("3_sjx8o")
region = Rect2(68, 0, 16, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxmps"]
atlas = ExtResource("3_sjx8o")
region = Rect2(85, 0, 16, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_meoat"]
atlas = ExtResource("3_sjx8o")
region = Rect2(102, 0, 16, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_n8cdl"]
atlas = ExtResource("3_sjx8o")
region = Rect2(119, 0, 16, 9)

[sub_resource type="SpriteFrames" id="SpriteFrames_i0otx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wtliu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfm1o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7gmy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvvpt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ddng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxmps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_meoat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n8cdl")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gfm1o"]
size = Vector2(167, 12)

[node name="GameMain" type="Node2D"]
script = ExtResource("1_womm6")

[node name="BackgroundColor" type="ColorRect" parent="."]
custom_minimum_size = Vector2(180, 200)
offset_right = 180.0
offset_bottom = 200.0
mouse_filter = 2
color = Color(0, 0.33725, 0.839203, 1)

[node name="Playfield" type="Node2D" parent="."]

[node name="Cloud1" parent="Playfield" instance=ExtResource("9_kx2xn")]
speed = 1.1

[node name="Cloud2" parent="Playfield" instance=ExtResource("9_kx2xn")]
position = Vector2(85, 2)
speed = 1.4

[node name="BackgroundWater" type="Sprite2D" parent="Playfield"]
position = Vector2(91, 112)
texture = ExtResource("4_gfm1o")

[node name="BubblesMinY" type="Marker2D" parent="Playfield"]
position = Vector2(12, 54)

[node name="BubblesRoot" type="Node2D" parent="Playfield"]

[node name="Xogotl" parent="Playfield" instance=ExtResource("5_8hvka")]
position = Vector2(73, 147)

[node name="Worm" parent="Playfield" instance=ExtResource("4_er30b")]
position = Vector2(99, 57)

[node name="Shrimp" parent="Playfield" instance=ExtResource("7_c21e4")]
position = Vector2(116, 93)

[node name="Boat" parent="Playfield" instance=ExtResource("8_gfm1o")]
position = Vector2(85, 18)

[node name="WavesRoot" type="Node2D" parent="Playfield"]
position = Vector2(11, 32)

[node name="Wave1" type="AnimatedSprite2D" parent="Playfield/WavesRoot"]
sprite_frames = SubResource("SpriteFrames_i0otx")
autoplay = "default"
frame_progress = 0.687999
centered = false

[node name="Wave2" type="AnimatedSprite2D" parent="Playfield/WavesRoot"]
position = Vector2(16, 0)
sprite_frames = SubResource("SpriteFrames_i0otx")
autoplay = "default"
frame_progress = 0.687999
centered = false

[node name="Wave3" type="AnimatedSprite2D" parent="Playfield/WavesRoot"]
position = Vector2(32, 0)
sprite_frames = SubResource("SpriteFrames_i0otx")
autoplay = "default"
frame_progress = 0.687999
centered = false

[node name="Wave4" type="AnimatedSprite2D" parent="Playfield/WavesRoot"]
position = Vector2(48, 0)
sprite_frames = SubResource("SpriteFrames_i0otx")
autoplay = "default"
frame_progress = 0.687999
centered = false

[node name="Wave5" type="AnimatedSprite2D" parent="Playfield/WavesRoot"]
position = Vector2(64, 0)
sprite_frames = SubResource("SpriteFrames_i0otx")
autoplay = "default"
frame_progress = 0.687999
centered = false

[node name="Wave6" type="AnimatedSprite2D" parent="Playfield/WavesRoot"]
position = Vector2(80, 0)
sprite_frames = SubResource("SpriteFrames_i0otx")
autoplay = "default"
frame_progress = 0.687999
centered = false

[node name="Wave7" type="AnimatedSprite2D" parent="Playfield/WavesRoot"]
position = Vector2(96, 0)
sprite_frames = SubResource("SpriteFrames_i0otx")
autoplay = "default"
frame_progress = 0.687999
centered = false

[node name="Wave8" type="AnimatedSprite2D" parent="Playfield/WavesRoot"]
position = Vector2(112, 0)
sprite_frames = SubResource("SpriteFrames_i0otx")
autoplay = "default"
frame_progress = 0.687999
centered = false

[node name="Wave9" type="AnimatedSprite2D" parent="Playfield/WavesRoot"]
position = Vector2(128, 0)
sprite_frames = SubResource("SpriteFrames_i0otx")
autoplay = "default"
frame_progress = 0.687999
centered = false

[node name="Wave10" type="AnimatedSprite2D" parent="Playfield/WavesRoot"]
position = Vector2(144, 0)
sprite_frames = SubResource("SpriteFrames_i0otx")
autoplay = "default"
frame_progress = 0.687999
centered = false

[node name="GameBackgroundWalls" type="Sprite2D" parent="."]
position = Vector2(0, 27)
texture = ExtResource("4_wtliu")
centered = false

[node name="WallsCollider" type="StaticBody2D" parent="GameBackgroundWalls"]
position = Vector2(1, 0)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="GameBackgroundWalls/WallsCollider"]
polygon = PackedVector2Array(0, 0, 9, 5, 11, 105, 12, 110, 14, 115, 14, 119, 16, 123, 19, 126, 22, 132, 27, 136, 31, 143, 36, 144, 42, 148, 53, 153, 60, 158, 74, 158, 87, 159, 99, 157, 110, 159, 116, 159, 120, 162, 129, 159, 142, 149, 150, 141, 158, 138, 163, 129, 165, 117, 169, 101, 169, 5, 172, 3, 179, 2, 179, 173, -1, 173)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GameBackgroundWalls/WallsCollider"]
position = Vector2(88, 14)
shape = SubResource("RectangleShape2D_gfm1o")

[node name="CanvasLayerHud" type="CanvasLayer" parent="."]

[node name="HudRoot" parent="CanvasLayerHud" instance=ExtResource("10_tnuef")]

[connection signal="has_eaten_inhabitant" from="Playfield/Xogotl" to="." method="_on_xogotl_has_eaten_inhabitant"]
